deploy/k8s/distributed/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agent-browser-api-route
  namespace: agent-browser
  labels:
    app: agent-browser-cp
spec:
  hostnames:
  - agent-browser-api.vpc-dale.gimcyun.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: istio-gateway
    namespace: istio-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: agent-browser-cp
      port: 8000
      weight: 100
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agent-browser-vnc-route
  namespace: agent-browser
  labels:
    app: agent-browser-cp
spec:
  hostnames:
  - agent-browser-vnc.vpc-dale.gimcyun.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: istio-gateway
    namespace: istio-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: agent-browser-cp
      port: 8000
      weight: 100
    matches:
    - path:
        type: PathPrefix
        value: /
